[FIX] Font size description mobile

--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -469,7 +469,7 @@ section {
 .hero h2 {
     color: #1d1d1b;
     margin: 15px 0 0 0;
-    font-size: 20px;
+    font-size: 25px;
 }
 
 .hero .btn-get-started {
@@ -536,7 +536,7 @@ section {
     }
 
     .hero h2 {
-        font-size: 24px;
+        font-size: 20px;
     }
 
     .hero .hero-img img {
